tests/fixtures/invalid/none_ge_bool.py
# Cannot compare with >= None and Bool
x: bool = None >= True
